# tock

./: .lcignore  .libtock_c_ci_rev  0001-target-riscv-pmp.c-respect-mseccfg.RLB-for-pmpaddrX-.patch  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  litex_sim.yml  test.yml  treadmill-ci.yml
arch/cortex-m/src/: mpu.rs
arch/riscv/src/: lib.rs
arch/rv32i/src/: epmp.rs  lib.rs  pmp.rs  syscall.rs
boards/acd52832/src/: main.rs
boards/arty_e21/src/: main.rs
boards/clue_nrf52840/src/: main.rs
boards/components/src/: ccs811.rs  cdc.rs  console.rs  debug_writer.rs  i2c.rs  ieee802154.rs  lib.rs  lpm013m126.rs  spi.rs
boards/earlgrey-nexysvideo/src/: main.rs
boards/esp32-c3-devkitM-1/src/: main.rs
boards/hail/src/: main.rs
boards/hifive1/src/: main.rs
boards/nordic/: nrf52840_chip_layout.ld
boards/nordic/nrf52840dk_2/: Cargo.toml  Makefile
boards/nordic/nrf52840dk_2/src/: main.rs
boards/qemu_rv32_virt/: Cargo.toml  Makefile  layout.ld
capsules/src/: alarm.rs  console.rs  driver.rs  enc28j60.rs  lib.rs  nrf51822_serialization.rs  virtual_aes_ccm.rs  virtual_i2c.rs  virtual_uart.rs
chips/sam4l/src/: lib.rs  (+4 more)
contsvc/: Cargo.toml
contsvc/src/: lib.rs
doc/reference/: trd-uart.md  trd104-syscalls.md
doc/syscalls/: 10001_ros.md  README.md
kernel/src/: config.rs  debug.rs  deferred_call.rs  deferred_call2.rs  deferred_call3.rs  dmabuffer.rs  grant.rs  ipc.rs  kernel.rs  lib.rs  process.rs  process_standard.rs  ros.rs  sched.rs  syscall.rs  threadlocal.rs  upcall.rs
tools/litex-ci-runner/: Cargo.toml
tools/tockbot/: http_cache.sqlite
(+139 files in other folders)
